# sample-screen-capture

./: Cargo.toml
.cargo/: config.toml
src/: capture.rs  d3d.rs  display.rs  encoder.rs  main.rs  snapshot.rs  window.rs
