[package]
name = "sample-screen-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.42.0", features = [ 
"Graphics_Capture", "Win32_Foundation", "Graphics_DirectX_Direct3D11",  "Win32_System_WinRT_Direct3D11",
"Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Gdi", 
"Win32_System_WinRT_Graphics_Capture", "Win32_System_WinRT", "Foundation", "Win32_UI_WindowsAndMessaging", "Graphics_Imaging", "Storage_Streams", "Win32_Graphics_Dxgi_Common"
]}